changed size of img2

--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -74,7 +74,7 @@
                     .img2{
                         padding: 4px 19px 0 122px;
                         margin-bottom: -74px;
-                        max-width: 293px;
+                        width: 439px;
                     }
                     .title2{
                         margin-left: 41px;
