--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -2,10 +2,10 @@
 @import "globals";
 @import 'container';
 
-.main{
-    .main__skills{
-        .container{
-            .skills__title{
+.main {
+    .main__skills {
+        .container {
+            .skills__title {
                 font-size: 48px;
                 line-height: 80px;
                 font-weight: 600;
@@ -13,27 +13,32 @@
                 margin-bottom: 89px;
                 margin-top: 105px;
             }
-            .skills__content{
+
+            .skills__content {
                 display: grid;
                 grid-template-columns: repeat(3, 4fr);
                 gap: 12px;
-                .skills__card{
+
+                .skills__card {
                     background-color: #F5F5F5;
                     border-radius: 10px;
                 }
-                .card__title{
+
+                .card__title {
                     font-size: 30px;
                     line-height: 80px;
                     font-weight: 600;
                     color: $accent2;
                 }
-                .card__text1{
+
+                .card__text1 {
                     font-size: 16px;
                     line-height: 24px;
                     font-weight: 400;
                     color: $light;
                 }
-                .card__btn{
+
+                .card__btn {
                     font-size: 20px;
                     line-height: 30px;
                     font-weight: 500;
@@ -43,90 +48,110 @@
                     border-radius: 5px;
                     display: inline-block;
                 }
-                .card1{
+
+                .card1 {
                     grid-row: 1/3;
-                    .img1{
+
+                    .img1 {
                         padding-left: 22px;
-                        padding-right: 21px;margin-top: 37px;
+                        padding-right: 21px;
+                        margin-top: 37px;
                     }
-                    .title1{
+
+                    .title1 {
                         margin-left: 44px;
                         margin-bottom: -14px;
                         margin-top: 3px;
                     }
-                    .text1{
+
+                    .text1 {
                         padding-right: 45px;
                         padding-left: 43px;
                         margin-bottom: 27px;
                     }
-                    .text2{
+
+                    .text2 {
                         padding-right: 45px;
                         padding-left: 43px;
                         margin-bottom: 32px;
                     }
-                    .btn1{
+
+                    .btn1 {
                         padding: 17px 63px 16px 64px;
                         font-size: 18px;
                         margin-left: 43px;
                     }
                 }
-                .card2{
-                    .img2{
+
+                .card2 {
+                    .img2 {
                         padding: 4px 19px 0 122px;
                         margin-bottom: -74px;
-                        width: 439px;
+                        max-width: 293px;
                     }
-                    .title2{
+
+                    .title2 {
                         margin-left: 41px;
                         margin-bottom: -27px;
                     }
-                    .text3{
+
+                    .text3 {
                         padding-left: 41px;
                         padding-right: 50px;
                         margin-bottom: 33px;
                     }
-                    .btn2{
+
+                    .btn2 {
                         margin-left: 39px;
                     }
                 }
-                .card3{
-                    .img3{
+
+                .card3 {
+                    .img3 {
                         margin-bottom: -29px;
                         padding: 9px 63px 0 1px;
                     }
-                    .title3{
+
+                    .title3 {
                         margin-left: 42px;
                         margin-bottom: -33px;
                     }
-                    .text4{
+
+                    .text4 {
                         padding-right: 37px;
                         padding-left: 43px;
                         margin-bottom: 34px;
                     }
-                    .btn3{
+
+                    .btn3 {
                         margin-left: 43px;
                         margin-bottom: 44px;
                     }
                 }
-                .card4{
+
+                .card4 {
                     grid-column-start: 2;
                     grid-column-end: 4;
                     display: grid;
                     grid-template-columns: repeat(2, 4fr);
-                    .title4{
+
+                    .title4 {
                         margin-left: 47px;
                         margin-bottom: -22px;
                         margin-top: 53px;
                     }
-                    .text5{
+
+                    .text5 {
                         padding-right: 52px;
                         padding-left: 48px;
                         margin-bottom: 24px;
                     }
-                    .btn4{
+
+                    .btn4 {
                         margin-left: 44px;
                     }
-                    .img4{
+
+                    .img4 {
                         padding: 54px 25px 44px 32px;
                     }
                 }
